# getodo

./: .gitignore  CONTRIBUTING.md  README.md  idea.txt  pyproject.toml  requirements.txt  requirements_dev.txt
getodo/: __main__.py  cli.py  comment_syntax.json  getodo.py  getodo_cfg.json  getodo_cli.py  todoparser.py  utils.py
src/: getodo.py  main.py  todoparser.py
tests/: cpp_content.cpp  other_content.txt  py_content.py  test_TodoParser.py  test_parser.py  test_utils.py  todo_test.txt
tests/data/: cpp_file.cpp  not_supported.txt  py_file.py
