[tool.poetry]
name = "getodo"
version = "2.0.1"
description = "A python program to collect all your TODO(s)"
authors = ["Vyshnav Vinod <vyshnav.vinod003@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
getodo = "getodo.getodo_cli:main"